add 25 whys to the main page

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -223,6 +223,12 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
                   i.fa.fa-check-circle(aria-hidden="true")
                   |  #{title}
                 p!=text
+            section(class="6u 12u$(small) align-left")
+              h3
+                i.fa.fa-check-circle(aria-hidden="true")
+                |  Need more reasons? Read on!
+              p
+                a.button(href="why.html") 25 more reasons why you must attend
         div#trailer
           input(type="button" value="See in Action" style="padding: 0 1em" ng-click="watchPromo()")
 
