--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -208,13 +208,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
             p
             h2
             h2
-            p 
-              | We focus on the core principles of 
-              em software architecture
-              |  
-              em clean code
-              |  and 
-              em technical leadership.
+            p Here you learn more than on other conferences. We focus on the core areas that are paramount to your success — software architecture, clean code and leadership. All noise is removed and can be learned elsewhere.
           h2 Why the best developers choose DevTernity?
           div(class="row 200% why")
             each text, title in data.benefits
@@ -228,7 +222,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
                 i.fa.fa-check-circle(aria-hidden="true")
                 |  Need more reasons? Read on!
               p
-                a.button(href="why.html") 25 more reasons why you must attend
+                a.button(href="why.html") 25 reasons why you must be here
         div#trailer
           input(type="button" value="See in Action" style="padding: 0 1em" ng-click="watchPromo()")
 
