remove once a year

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -174,7 +174,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
           h2 &nbsp;DevTernity
 
         p=data.desc
-        p Once in a year. #{data.date}. #{data.city}, #{data.country}.
+        p #{data.date}. #{data.city}, #{data.country}.
         ul.actions
           if data.status == "on_sale"
             li
