--- a/event-template/why.pug
+++ b/event-template/why.pug
@@ -38,11 +38,11 @@ html(lang="en")
 							p 83% of conference attendees are top-level professionals — senior developers, software architects and engineering leaders. How they have become successful? They are great at making choices. The conference is an important choice that will influence your career. Trust those who is already at the top.
 						.tile.is-child
 							p.title Know more than your competitors
-							p In just two days, you will learn much more than your competitors, who attend narrow-focused conferences. Start preparing for the role of software architect, engineering leader or CTO today.
+							p In just two days, you will learn much more than your competitors, who attend narrow-focused conferences. We focus on the core areas that are paramount to your success — software architecture, clean code and leadership. All noise is removed. Start preparing for the role of software architect, engineering leader or CTO today. 
 						.tile.is-child
 							p.title Earn certificate of attendance 
 								i.has-text-warning.fas.fa-trophy(aria-hidden="true")
-							p After the conference, we issue an official, nice, laminated certificate of accomplishment, confirming the attendance of the conference. Use it for for boosting your credibility. Or just prove your parner you weren't swimming on Bali.	
+							p After the conference, we issue an official, nice, laminated certificate of accomplishment, confirming the attendance of the conference. Use it for for boosting your credibility, enrich your LinkedIn profile or build a nice certificate wall.
 						.tile.is-child
 							p.title Get salary raise
 							p We talk to our permanent attendees and many report increase in salary. Depending on the market, architects earn 25-70% than developers. Want to turn your 3K into 5K? Jump on the bus and learn things that matter.
@@ -53,7 +53,6 @@ html(lang="en")
 						.tile.is-child
 							p.title We buy you a lunch
 							p You have only one stomack, but many conferences try to kill you with a baguette made of stone. We serve tasty, freshly cooked, organic food. Meat eater? Vegetarian? Vegan? We won't leave you hungry.
-								//- img.image(src="/images/meal.jpg")
 						.tile.is-child
 							p.title Learn directly from industry influencers
 							p Tired of Captain Obvious, marketing and Agile bullshit? We, too. We only invite speakers with outstanding technical and public speaking skills. Any exceptions, such as sponsored talks? Sorry, not at this conference.
