--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -494,7 +494,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
             br
             br
             p {{subscribeMessage}}
-            strong: a(href="#" data-remodal-action="close") No, thanks. Already have a my ticket.
+            strong: a(href="#" data-remodal-action="close") No, thanks. Already have my ticket.
       ul.copyright
         li &copy; DevTernity OÜ, 14226860, Mõisavahe tn 38-129 Tartu, Estonia. 
         br 
