change description in why.pug

--- a/event-template/why.pug
+++ b/event-template/why.pug
@@ -6,7 +6,7 @@ html(lang="en")
 		title DevTernity — #{no} Reasons Why You Must be Here
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		meta(http-equiv="x-ua-compatible" content="ie=edge")
-		meta(name="description" content="There are at least 99 reasons why you must be present at DevTernity.")
+		meta(name="description" content=`There are at least ${no} reasons why you must be present at DevTernity.`)
 		meta(name="keywords" content="")
 		meta(name="robots" content="index,follow")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/page.js/1.8.6/page.min.js")
